--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^6.1.7",
-    "multer": "^1.4.4"
+    "mongoose": "^6.1.7"
   },
   "devDependencies": {
     "dotenv": "^14.2.0",
